<resources>
    <string name="app_name">MadLevel1Task1</string>
    <string name="explanation">Guess if the next throw is going to be lower, equal, or higher.</string>
    <string name="lower">LOWER</string>
    <string name="equal">EQUALS</string>
    <string name="higher">HIGHER</string>
    <string name="last_throw">Last Throw: %1$d</string>
    <string name="correct">You guessed correctly!</string>
    <string name="incorrect">You guessed incorrectly.</string>
</resources>